[build-system]
requires = ["hatchling", "hatch-fancy-pypi-readme"]
build-backend = "hatchling.build"

[project]
version = "1.1.0"
name = "skosprovider_atramhasis"
dynamic = ["readme"]
authors = [
    { name = "Flanders Heritage Agency", email = "ict@onroerenderfgoed.be" },
]
license = "MIT"
description = "Skosprovider implementation of Atramhasis Vocabularies"
requires-python = ">=3.10,<3.13.11"
keywords = ["rdf", "skos", "skosprovider", "vocabularies", "thesauri"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Framework :: Pyramid",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "requests>=2.32.3",
    "skosprovider>=1.2.0",
    "dogpile.cache>=1.1.4",
]

[project.urls]
History = "https://github.com/OnroerendErfgoed/skosprovider_atramhasis/blob/master/CHANGES.rst"
Tracker = "https://github.com/OnroerendErfgoed/skosprovider_atramhasis/issues"
Source = "https://github.com/OnroerendErfgoed/skosprovider_atramhasis"
Documentation = "https://skosprovider-atramhasis.readthedocs.io/en/latest/"

[project.optional-dependencies]
dev = [
    "uv>=0.4.1",
    "pytest>=8.3.3",
    "responses>=0.25.3",
    "pytest-cov>=5.0.0",
    "coveralls>=4.0.1",
]

##
# Build tool specific
##
[tool.hatch.build.targets.wheel]
# In the wheel we want to have skosprovider_atramhasis in the root as python module.
only-include = [
    "/skosprovider_atramhasis",
]

[tool.hatch.metadata]
# This allows us to use github links as dependencies
allow-direct-references = true

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/x-rst"
fragments = [
  { path = "README.rst" },
  { path = "CHANGES.rst" },
]
